[package]
name = "json-minimal-tests"
version = "0.1.9"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = """
Extracts minimal tests from the source codes of a repository when
there are differences between the metrics computed before and after
an update of a language parser.
"""
repository = "https://github.com/Luni-4/json-minimal-tests"
keywords = ["json-diff", "minimal-tests"]
license = "MIT"
edition = "2021"

[[bin]]
name = "json-minimal-tests"

[dependencies]
assert-json-diff = "^2"
clap = "^2.33"
crossbeam = "^0.8"
encoding_rs = "^0.8"
html-escape = "^0.2"
num_cpus = "^1.13"
regex = "^1"
serde_json = "^1.0"
walkdir = "^2.3"
